# cuequivariance-adapter

./: README.md  pyproject.toml  setup.cfg
cueq_e3nn_jax_adapter/_core/: __init__.py  tensor_product.py
cueq_e3nn_jax_adapter/flax/: __init__.py  fully_connected_tensor_product.py  linear.py  symmetric_contraction.py  tensor_product.py
cueq_e3nn_jax_adapter/haiku/: linear.py  symmetric_contraction.py  tensor_product.py  utility.py
cuequivariance_adapter/: __init__.py  _utility.py  fully_connected_tensor_product.py  linear.py  symmetric_contraction.py  tensor_product.py  utility.py
cuequivariance_adapter/_core/: fully_connected_tensor_product.py  linear.py  symmetric_contraction.py
cuequivariance_adapter/haiku/: fully_connected_tensor_product.py  linear.py  symmetric_contraction.py  tensor_product.py
scripts/: show_tensor_product_shape_mismatch.py
tests/: __init__.py  _flax_builder_utils.py  _fully_connected_test_utils.py  _haiku_builder_utils.py  _linear_test_utils.py  _symmetric_contraction_test_utils.py  _tensor_product_test_utils.py  _torch_patch.py  _torch_utils.py  conftest.py  test_flax_fully_connected_tensor_product.py  test_flax_linear.py  test_flax_symmetric_contraction.py  test_flax_tensor_product.py  test_fully_connected_tensor_product.py  test_haiku_fully_connected_tensor_product.py  test_haiku_linear.py  test_haiku_symmetric_contraction.py  test_haiku_tensor.py  test_linear.py  test_symmetric_contraction.py  test_tensor.py
