[metadata]
name = cuequivariance_adapter
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
install_requires =
    chex
    optax
    e3nn_jax
    numpy
    ase
    matscipy
    roundmantissa
    jraph
    jax>=0.4.23
    cuequivariance
    cuequivariance-jax
    dm-haiku
    gin-config
    unique_names_generator
    tqdm
    # for plotting:
    matplotlib
    pandas
